2006-07-05  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/InputMap.java
	(inputMap): Don't initialize yet,
	(InputMap): Removed TODO,
	(get): Check for null inputMap,
	(put): Return immediately for null keyStroke, check for null inputMap
	and initialize if necessary,
	(remove): Check for null inputMap,
	(size): Likewise,
	(clear): Likewise,
	(keys): Likewise,
	(allKeys): Likewise,
	(writeObject): Removed,
	(readObject): Removed.

2006-07-05  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/classpath/examples/swing/TabbedPaneDemo.java
	(createContent): Use different labels for buttons.

2006-07-04  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* NEWS:	Updated.
	* doc/vmintegration.texinfo: Likewise.
	* examples/gnu/classpath/examples/management/TestMemoryPool.java,
	* gnu/java/lang/management/MemoryPoolMXBeanImpl.java:
	New files.
	* java/lang/management/ManagementFactory.java:
	(getMemoryPoolMXBeans()): Implemented.
	* vm/reference/gnu/java/lang/management/VMMemoryPoolMXBeanImpl.java,
	* vm/reference/java/lang/management/VMManagementFactory.java:
	New files.
	
2006-07-04  Lillian Angel  <langel@redhat.com>

	* java/awt/dnd/DragSourceContext.java:
	Removed FIXMEs from fields.
	(DragSourceContext): Added code to initialize cursor and sourceActions.
	(getDragSource): Added documentation.
	(getComponent): Likewise.
	(getTrigger): Likewise.
	(getSourceActions): Added documentation and implemented.
	(setCursor): Implemented. Added documentation.
	(getCursor): Implemented. Added documentation.
	(dragEnter): Added code to notify DragSource's listeners.
	(dragOver): Likewise.
	(dragExit): Likewise.
	(dropActionChanged): Likewise.
	(dragDropEnd): Likewise.
	(dragMouseMoved): Implemented.
	(getTransferable): Added API documentation.
	(updateCurrentCursor): Added API documentation and partially implemented.

2006-07-04  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* javax/swing/plaf/basic/BasicTreeUI.java (KeyHandler): Implemented.
